@@ -21,78 +21,126 @@
 // ********************************************************************
 //
 //
-// beta version of G4AnnihiToMuPair.hh,v   H.Burkhardt, January 2003
+// $Id: G4AnnihiToMuPair.cc,v 1.2 2003-02-04 11:08:42 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //         ------------ G4AnnihiToMuPair physics process ------
 //         by H.Burkhardt, S. Kelner and R. Kokoulin, November 2002
 // -----------------------------------------------------------------------------
+//
+//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......//
+//
+// 04.02.03 : cosmetic simplifications (mma)
+// 27.01.03 : first implementation (hbu)
+//
+//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
 
 #include "G4AnnihiToMuPair.hh"
-#include "G4EnergyLossTables.hh"
-#include "G4UnitsTable.hh"
+
+#include "G4ios.hh"
+#include "Randomize.hh"
+
+#include "G4Positron.hh"
 #include "G4MuonPlus.hh"
 #include "G4MuonMinus.hh"
+#include "G4Material.hh"
+#include "G4Step.hh"
 
-//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo.....
+//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
 
 // constructor
 
 G4AnnihiToMuPair::G4AnnihiToMuPair(const G4String& processName)
-  : G4VDiscreteProcess (processName),
-    LowestEnergyLimit (2.*
-      pow(G4MuonPlus::MuonPlus()->GetPDGMass(),2)/electron_mass_c2
-      -electron_mass_c2), // Eth = 2.*Mmuon*Mmuon/Mele-Mele
-    HighestEnergyLimit(1000.*TeV), // ok up to 1000 TeV due to neglected
-	                              // Z-interference
-    CrossSecFactor(1.)
+  : G4VDiscreteProcess (processName)
 {
+ //e+ Energy threshold
+ const G4double Mu_massc2 = G4MuonPlus::MuonPlus()->GetPDGMass();
+ LowestEnergyLimit  = 2*Mu_massc2*Mu_massc2/electron_mass_c2 - electron_mass_c2;
+ 
+ //modele ok up to 1000 TeV due to neglected Z-interference
+ HighestEnergyLimit = 1000*TeV;
+ 
+ CrossSecFactor = 1.;
 }
 
-//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo.....
-
-// destructor
+//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
 
 G4AnnihiToMuPair::~G4AnnihiToMuPair() // (empty) destructor
-{ 
+{ }
+
+//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
+
+G4bool G4AnnihiToMuPair::IsApplicable(const G4ParticleDefinition& particle)
+{
+  return ( &particle == G4Positron::Positron() );
 }
 
-//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo.....
+//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
 
 void G4AnnihiToMuPair::BuildPhysicsTable(const G4ParticleDefinition&)
 // Build cross section and mean free path tables
-{  //here no tables, just calling PrintInfoDefinition
+//here no tables, just calling PrintInfoDefinition
+{
    PrintInfoDefinition();
 }
 
-//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo.....
+//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
 
 void G4AnnihiToMuPair::SetCrossSecFactor(G4double fac)
 // Set the factor to artificially increase the cross section
-{ CrossSecFactor=fac;
+{ 
+  CrossSecFactor = fac;
   G4cout << "The cross section for AnnihiToMuPair is artificially "
          << "increased by the CrossSecFactor=" << CrossSecFactor << G4endl;
 }
 
-//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo.....
+//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
 
-G4double G4AnnihiToMuPair::ComputeCrossSectionPerAtom(
-                         G4double Epos, G4double Z)
+G4double G4AnnihiToMuPair::ComputeCrossSectionPerAtom(G4double Epos, G4double Z)
 // Calculates the microscopic cross section in GEANT4 internal units.
 // It gives a good description from threshold to 1000 GeV
 {
-  static const G4double Mmuon=G4MuonPlus::MuonPlus()->GetPDGMass();
-  static const G4double Rmuon=elm_coupling/Mmuon; // classical particle radius
-  static const G4double Sig0=pi*Rmuon*Rmuon/3.; // constant factor in cross section
+  static const G4double Mmuon = G4MuonPlus::MuonPlus()->GetPDGMass();
+  static const G4double Rmuon = elm_coupling/Mmuon; //classical particle radius
+  static const G4double Sig0  = pi*Rmuon*Rmuon/3.;  //constant in crossSection
 
-  G4double xi=LowestEnergyLimit/Epos;
-  G4double SigmaEl=Sig0*xi*(1.+xi/2.)*sqrt(1.-xi); // per electron
-  G4double CrossSection=SigmaEl*Z; // multiply with number of electrons per atom
-  CrossSection*=CrossSecFactor; // increase the CrossSection by  (by default 1)
+  G4double CrossSection = 0.;
+  if (Epos < LowestEnergyLimit) return CrossSection;
+   
+  G4double xi = LowestEnergyLimit/Epos;
+  G4double SigmaEl = Sig0*xi*(1.+xi/2.)*sqrt(1.-xi); // per electron
+  CrossSection = SigmaEl*Z;         // number of electrons per atom
+  CrossSection *= CrossSecFactor;   //increase the CrossSection by  (default 1)
   return CrossSection;
 }
 
-//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo.....
+//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
+
+G4double G4AnnihiToMuPair::GetMeanFreePath(const G4Track& aTrack,
+                                           G4double, G4ForceCondition*)
+
+// returns the positron mean free path in GEANT4 internal units
+
+{
+  const G4DynamicParticle* aDynamicPositron = aTrack.GetDynamicParticle();
+  G4double PositronEnergy = aDynamicPositron->GetKineticEnergy()
+                                              +electron_mass_c2;
+  G4Material* aMaterial = aTrack.GetMaterial();
+  const G4ElementVector* theElementVector = aMaterial->GetElementVector();
+  const G4double* NbOfAtomsPerVolume = aMaterial->GetVecNbOfAtomsPerVolume();
+
+  G4double SIGMA = 0 ;
+
+  for ( size_t i=0 ; i < aMaterial->GetNumberOfElements() ; i++ )
+  {
+    G4double AtomicZ = (*theElementVector)[i]->GetZ();
+    SIGMA += NbOfAtomsPerVolume[i] *
+      ComputeCrossSectionPerAtom(PositronEnergy,AtomicZ);
+  }
+  return SIGMA > DBL_MIN ? 1./SIGMA : DBL_MAX;
+}
+
+//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
 
 G4VParticleChange* G4AnnihiToMuPair::PostStepDoIt(const G4Track& aTrack,
                                                   const G4Step&  aStep)
@@ -109,72 +157,78 @@ G4VParticleChange* G4AnnihiToMuPair::PostStepDoIt(const G4Track& aTrack,
   const G4DynamicParticle *aDynamicPositron = aTrack.GetDynamicParticle();
   G4double Epos = aDynamicPositron->GetKineticEnergy()+Mele;
 
- if(Epos < LowestEnergyLimit)
-  { G4cout << "error in G4AnnihiToMuPair::PostStepDoIt called with energy below threshold Epos="
-	<< Epos << G4endl; // shoud never happen
+ if (Epos < LowestEnergyLimit)
+  { G4cout 
+        << "error in G4AnnihiToMuPair::PostStepDoIt called with energy below"
+	   " threshold Epos= "
+	<< Epos << G4endl;       // shoud never happen
 	G4Exception(10);
   }
 
-  if (Epos < LowestEnergyLimit) return G4VDiscreteProcess::PostStepDoIt(aTrack,aStep);
+  if (Epos < LowestEnergyLimit)
+     return G4VDiscreteProcess::PostStepDoIt(aTrack,aStep);
 
-  G4ParticleMomentum PositronDirection = aDynamicPositron->GetMomentumDirection();
-  // aParticleChange.Initialize(aTrack); // again, seen in G4eplusAnnihilation.cc
-
-  // G4double Ecms=sqrt(0.5*Mele*(Mele+Epos)); // energy of e+,e- and also mu+, mu- in cms fram, not needed
-  // G4double pmu=sqrt(Ecms*Ecms-Mmuon*Mmuon); // not needed
-  G4double xi=LowestEnergyLimit/Epos; // xi is always less than 1, goes to 0 at high Epos
+  G4ParticleMomentum PositronDirection = 
+                                       aDynamicPositron->GetMomentumDirection();
+  G4double xi = LowestEnergyLimit/Epos; // xi is always less than 1,
+                                        // goes to 0 at high Epos
 
   // generate cost
+  //
   G4double cost;
-  do cost=2.*G4UniformRand()-1.; // cost is in the range -1 to +1
-  while ( 2.*G4UniformRand() > 1.+xi+cost*cost*(1.-xi) ); // 1+cost**2 at high Epos
-  G4double sint=sqrt(1.-cost*cost);
+  do cost = 2.*G4UniformRand()-1.;
+  while (2.*G4UniformRand() > 1.+xi+cost*cost*(1.-xi) ); 
+                                                       //1+cost**2 at high Epos
+  G4double sint = sqrt(1.-cost*cost);
 
   // generate phi
+  //
   G4double phi=2.*pi*G4UniformRand();
 
-  G4double Ecm=sqrt(0.5*Mele*(Epos+Mele));
-  G4double Pcm=sqrt(Ecm*Ecm-Mmuon*Mmuon);
-  G4double beta=sqrt((Epos-Mele)/(Epos+Mele));
-  G4double gamma=Ecm/Mele; // =sqrt((Epos+Mele)/(2.*Mele));
-  G4double Pt=Pcm*sint;
+  G4double Ecm   = sqrt(0.5*Mele*(Epos+Mele));
+  G4double Pcm   = sqrt(Ecm*Ecm-Mmuon*Mmuon);
+  G4double beta  = sqrt((Epos-Mele)/(Epos+Mele));
+  G4double gamma = Ecm/Mele;                    // =sqrt((Epos+Mele)/(2.*Mele));
+  G4double Pt    = Pcm*sint;
+  
   // energy and momentum of the muons in the Lab
-  G4double EmuPlus  =gamma*(     Ecm+cost*beta*Pcm);
-  G4double EmuMinus =gamma*(     Ecm-cost*beta*Pcm);
-  G4double PmuPlusZ =gamma*(beta*Ecm+cost*     Pcm);
-  G4double PmuMinusZ=gamma*(beta*Ecm-cost*     Pcm);
+  //
+  G4double EmuPlus   = gamma*(     Ecm+cost*beta*Pcm);
+  G4double EmuMinus  = gamma*(     Ecm-cost*beta*Pcm);
+  G4double PmuPlusZ  = gamma*(beta*Ecm+cost*     Pcm);
+  G4double PmuMinusZ = gamma*(beta*Ecm-cost*     Pcm);
   G4double PmuPlusX  = Pt*cos(phi);
   G4double PmuPlusY  = Pt*sin(phi);
   G4double PmuMinusX =-Pt*cos(phi);
   G4double PmuMinusY =-Pt*sin(phi);
   // absolute momenta
-  G4double PmuPlus =sqrt(Pt*Pt+PmuPlusZ *PmuPlusZ );
-  G4double PmuMinus=sqrt(Pt*Pt+PmuMinusZ*PmuMinusZ);
+  G4double PmuPlus  = sqrt(Pt*Pt+PmuPlusZ *PmuPlusZ );
+  G4double PmuMinus = sqrt(Pt*Pt+PmuMinusZ*PmuMinusZ);
 
   // mu+ mu- directions for Positron in z-direction
+  //
   G4ThreeVector
-    MuPlusDirection ( PmuPlusX/PmuPlus, PmuPlusY/PmuPlus, PmuPlusZ/PmuPlus  );
+    MuPlusDirection ( PmuPlusX/PmuPlus, PmuPlusY/PmuPlus,  PmuPlusZ/PmuPlus  );
   G4ThreeVector
     MuMinusDirection(PmuMinusX/PmuMinus,PmuMinusY/PmuMinus,PmuMinusZ/PmuMinus);
 
   // rotate to actual Positron direction
+  //
   MuPlusDirection.rotateUz(PositronDirection);
   MuMinusDirection.rotateUz(PositronDirection);
 
   aParticleChange.SetNumberOfSecondaries(2);
   // create G4DynamicParticle object for the particle1
   G4DynamicParticle* aParticle1= new G4DynamicParticle(
-                           G4MuonPlus::MuonPlus(),MuPlusDirection,EmuPlus-Mmuon);
+                         G4MuonPlus::MuonPlus(),MuPlusDirection,EmuPlus-Mmuon);
   aParticleChange.AddSecondary(aParticle1);
   // create G4DynamicParticle object for the particle2
   G4DynamicParticle* aParticle2= new G4DynamicParticle(
-                       G4MuonMinus::MuonMinus(),MuMinusDirection,EmuMinus-Mmuon);
+                     G4MuonMinus::MuonMinus(),MuMinusDirection,EmuMinus-Mmuon);
   aParticleChange.AddSecondary(aParticle2);
 
-  //
   // Kill the incident positron 
   //
-
   aParticleChange.SetMomentumChange( 0., 0., 0. );
   aParticleChange.SetEnergyChange(0.); 
   aParticleChange.SetStatusChange(fStopAndKill);
@@ -182,7 +236,7 @@ G4VParticleChange* G4AnnihiToMuPair::PostStepDoIt(const G4Track& aTrack,
   return &aParticleChange;
 }
 
-//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo.....
+//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
 
 void G4AnnihiToMuPair::PrintInfoDefinition()
 {
@@ -193,4 +247,4 @@ void G4AnnihiToMuPair::PrintInfoDefinition()
          << HighestEnergyLimit/TeV << " TeV for all Z." << G4endl;
 }
 
-//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
+//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
